<resources>
    <string name="app_name">tUtorSearCher</string>
    <string name="title_tutors">List</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_rating">Ratings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to loginData -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_register">Register</string>
    <string name="messages_unavailable">No messages available</string>

    <!--  strings related to Profile  -->
    <string name="name_label">Name:</string>
    <string name="grade_label">Grade:</string>
    <string name="availability_label">Availability:</string>
    <string name="tutor_label">Tutor</string>
    <string name="tutee_label">Tutee</string>
    <!--  tutors specifically  -->
    <string name="courses_taken_label">Courses Taken:</string>
    <string name="courses_tutoring_label">Courses Tutoring:</string>
    <string name="rating_label">Rating:</string>
    <string name="bio_label">Bio:</string>

    <!-- string array for spinner -->
    <string-array name="grade_array">
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Graduate</item>
        <item>Other</item>
    </string-array>

    <!--  tutees specifically  -->
    <string name="previous_tutors_label">Current Tutors:</string>
    <string name="notification_accept">Accept</string>
    <string name="notification_reject">Reject</string>
    <!-- search strings -->
    <string name="new_search_button_label">New Search</string>
    <string name="submit_search_button_label">Search</string>
    <string name="course_spinner_label">Select Course:</string>
    <string name="time_select_grid_label">Select Availability:</string>
    <string name="no_search_results">There are no search results.</string>
    <string name="notification_view">View</string>
    <string name="notifications_empty">No notifications</string>


</resources>
