<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">
    <TextView
            android:id="@+id/name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/name_label"
             />
    <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            />
    <TextView
            android:id="@+id/grade_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade_label"
            android:layout_marginBottom="15dp"
             />
    <TextView
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            />
    <TextView
            android:id="@+id/availability_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability_label"
            android:layout_marginBottom="15dp"
            />
<!--    use availability array to list all the open slots-->

    <!--  TUTOR PROFILE -->
    <TextView
            android:id="@+id/tutor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutor_label"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            />
    <TextView
            android:id="@+id/courses_taken_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses_taken_label"
            android:layout_marginBottom="15dp"
            />
<!--    use courses taken array to list all courses -->
    <TextView
            android:id="@+id/courses_tutoring_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses_tutoring_label"
            android:layout_marginBottom="15dp"
            />
<!--    use courses tutoring array to list all courses tutoring -->
    <TextView
            android:id="@+id/rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_label"
            android:layout_marginBottom="15dp"
            />
    <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            />

    <!--  TUTEE PROFILE  -->
    <TextView
            android:id="@+id/tutee_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutee_label"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            />
    <TextView
            android:id="@+id/previous_tutors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_tutors_label"
            android:layout_marginBottom="15dp"
            />
<!--    use previous tutors array to list all the tutors-->
</LinearLayout>

<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--             android:layout_width="match_parent"-->
<!--             android:layout_height="match_parent">-->

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/title_profile" />-->

<!--    <TextView-->
<!--            android:id="@+id/textView5"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="TextView" />-->
<!--</FrameLayout>-->