<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <!-- name -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

        <TextView
                android:id="@+id/name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_label"
                android:textSize="20sp" />
        <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="text" />
    </LinearLayout>

    <!-- grade -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:id="@+id/grade_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/grade_label"
                android:layout_weight="1"
                android:textSize="20sp"
                />
        <EditText
                android:id="@+id/grade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="text" />
    </LinearLayout>

    <!-- FIGURE OUT HOW TO DEAL WITH AVAILABILITY -->
    <TextView
            android:id="@+id/availability_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availability_label"
            android:textSize="20sp"
            />

    <!-- TUTOR PROFILE -->

    <!-- bio -->
    <TextView
            android:id="@+id/bio_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio_label"
            android:textSize="20sp"
            />
    <EditText
            android:id="@+id/bio"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            />

</LinearLayout>